# se_project1

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dvc.yaml  dwh.db  okteto.yml  pyproject.toml  requirements.txt  test.py  ui.py
.devcontainer/: Dockerfile  devcontainer.json
Frunch_Infinity/: README.md  pyproject.toml
config/: main.yaml
config/process/: turbofan.yaml
data/final/: results.feather
data/processed/: Output_prep1.csv  input_processed.feather  output_processed.csv
docs/src/: dwh.md  dwh_init.md  index.html  index.md  model.md  pipeline.html  pipeline.md  process.html  process.md  train_model.html  utils.md
models/: pipeline.py
pics/: .$class_UML_pipeline.drawio.bkp  class_UML_pipeline.drawio
src/: __init__.py  create_db.py  dwh.py  dwh_init.py  model.py  pipeline.py  process.py  train_model.py  utils.py
tests/: __init__.py  test_process.py  test_streamlit.py  test_train_model.py
