[tool.poetry]
name = "Frunch_Infinity"
version = "0.1.0"
description = ""
authors = ["Kainz, Mayr, Mitic"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pycaret = "^2.3.10"
Hydra = "^2.5"
pandas = "^1.4.2"
flake8 = "^4.0.1"
pyarrow = "^8.0.0"
pylint = "^2.13.9"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
